Added documentation for MiniZinc intelligent ensembles.