@@ -5,18 +5,35 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 
+/**
+ * Runs native applications. Returns output.
+ * 
+ * @author Zbyněk Jiráček
+ *
+ */
 public class ExternalAppRunner {
 	
+	/**
+	 * Runs the given command.
+	 * 
+	 * @param appPath Command (application). If the command contains spaces it should be wrapped in quote marks.
+	 * @param appArguments Arguments (will be joined and separated by spaces).
+	 * @return Output of the application, separated by lines (includes also error stream output).
+	 * @throws IOException
+	 */
 	public String[] run(String appPath, Collection<String> appArguments) throws IOException {
-		String command = String.format("\"%s\" %s", appPath, String.join(" ", appArguments));
+		String command = String.format("%s %s", appPath, String.join(" ", appArguments));
 		
-		Process process = new ProcessBuilder(command).start();
+		Process process = Runtime.getRuntime().exec(command);
 		InputStream is = process.getInputStream();
 		InputStreamReader isr = new InputStreamReader(is);
 		BufferedReader br = new BufferedReader(isr);
+		
+		BufferedReader brError = new BufferedReader(new InputStreamReader(process.getErrorStream()));
 		
 		String line;
 		List<String> output = new ArrayList<>();
@@ -24,7 +41,11 @@ public class ExternalAppRunner {
 			output.add(line);
 		}
 		
-		return (String[]) output.toArray();
+		while ((line = brError.readLine()) != null) {
+			output.add(line);
+		}
+		
+		return Arrays.copyOf(output.toArray(), output.size(), String[].class);
 	}
 
 }
